--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -22,7 +22,8 @@
     "default_popup": "src/popup/index.html"
   },
   "permissions": [
-    "http://localhost/*"
+    "http://localhost/*",
+    "tabs"
 
   ],
   "content_scripts": [
