--- a/Browser/manifest_3.json
+++ b/Browser/manifest_3.json
@@ -1,7 +1,7 @@
 {
   "name": "WatchRPC",
-  "version": "3.0.0",
-  "manifest_version": 2,
+  "version": "1.0.0",
+  "manifest_version": 3,
   "description": "Lets you display what your watching on discord",
   "homepage_url": "https://waterwolf.tk/projects/watchrpc2",
   "icons": {
@@ -15,7 +15,7 @@
   "background": {
     "scripts": ["dist/background.js"]
   },
-  "browser_action": {
+  "action": {
     "default_icon": "static/icons/icon64.png",
     "default_title": "WatchRPC",
     "default_popup": "static/popup/index.html"
@@ -23,8 +23,10 @@
   "permissions": [
     "tabs",
     "scripting",
-    "webRequest",
-    "http://localhost/*"
+    "webRequest"
+  ],
+  "host_permissions": [
+      "http://localhost/*"
   ],
   "content_scripts": [
     {
