--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -22,18 +22,17 @@
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
-    "@types/discord-rpc": "^4.0.3",
+    "@types/discord-rpc": "^4.0.4",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.14.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^22.2.0",
-    "eslint": "^7.32.0",
-    "prettier": "2.8.7",
-    "typescript": "^4.8.3"
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "electron": "^25.1.0",
+    "eslint": "^8.42.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@pyke/vibe": "^0.4.0",
     "discord-rpc": "^4.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2"
