Added spotify support ✅

--- a/Browser/manifest.json
+++ b/Browser/manifest.json
@@ -32,7 +32,12 @@
       "js": ["dist/inject/WatchRPC_full_YTmusic.js"]
     },
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["*://open.spotify.com/*"],
+      "run_at":"document_end",
+      "js": ["dist/inject/WatchRPC_spotify.js"]
+    },
+    {
+      "matches": ["*://www.youtube.com/*"],
       "run_at":"document_end",
       "js": ["dist/inject/WatchRPC_full_Youtube.js"]
     }
