🛠️ Removed prettier, added ESlint, and started work on new platforms
🛠️Removed prettier, added ESlint
📻  Started work on more platforms

--- a/Browser/manifest.json
+++ b/Browser/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "WatchRPC",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "manifest_version": 2,
   "description": "Lets you display what your watching on discord",
   "homepage_url": "https://waterwolf.tk/projects/watchrpc2",
@@ -35,6 +35,11 @@
       "matches": ["*://open.spotify.com/*"],
       "run_at":"document_end",
       "js": ["dist/inject/WatchRPC_spotify.js"]
+    },
+    {
+      "matches": ["*://music.apple.com/*"],
+      "run_at":"document_end",
+      "js": ["dist/inject/WatchRPC_AppleMusic.js"]
     },
     {
       "matches": ["*://www.youtube.com/*"],
