--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "make": "npm run build && electron-forge make",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./dist/main.js",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint"
   },
   "repository": "",
   "keywords": [
@@ -25,16 +25,16 @@
     "@types/discord-rpc": "^4.0.4",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "electron": "^25.1.0",
-    "eslint": "^8.42.0",
-    "prettier": "^2.8.8",
+    "eslint": "^8.53.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "discord-rpc": "^4.0.1",
     "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.14.2"
   }
 }
