--- a/Browser/manifest.json
+++ b/Browser/manifest.json
@@ -1,55 +1,84 @@
 {
-  "name": "WatchRPC",
-  "version": "3.1.0",
-  "manifest_version": 2,
-  "description": "Lets you display what your watching on discord",
-  "homepage_url": "https://waterwolf.tk/projects/watchrpc2",
-  "icons": {
-    "16": "static/icons/icon16.png",
-    "32": "static/icons/icon32.png",
-    "48": "static/icons/icon48.png",
-    "64": "static/icons/icon64.png",
-    "128": "static/icons/icon128.png",
-    "256": "static/icons/icon256.png"
-  },
-  "background": {
-    "scripts": ["dist/background.js"]
-  },
-  "browser_action": {
-    "default_icon": "static/icons/icon64.png",
-    "default_title": "WatchRPC",
-    "default_popup": "static/popup/index.html"
-  },
-  "permissions": [
-    "tabs",
-    "scripting",
-    "webRequest",
-    "http://localhost/*"
-  ],
-  "content_scripts": [
-    {
-      "matches": ["*://music.youtube.com/*"],
-      "js": ["dist/inject/WatchRPC_full_YTmusic.js"]
+    "name": "WatchRPC",
+    "version": "3.2.0",
+    "manifest_version": 2,
+    "description": "Lets you display what your watching on discord",
+    "homepage_url": "https://waterwolf.tk/projects/watchrpc2",
+    "icons": {
+        "16": "static/icons/icon16.png",
+        "32": "static/icons/icon32.png",
+        "48": "static/icons/icon48.png",
+        "64": "static/icons/icon64.png",
+        "128": "static/icons/icon128.png",
+        "256": "static/icons/icon256.png"
     },
-    {
-      "matches": ["*://open.spotify.com/*"],
-      "run_at":"document_end",
-      "js": ["dist/inject/WatchRPC_spotify.js"]
+    "background": {
+        "scripts": [
+            "dist/background.js"
+        ]
     },
-    {
-      "matches": ["*://music.apple.com/*"],
-      "run_at":"document_end",
-      "js": ["dist/inject/WatchRPC_AppleMusic.js"]
+    "browser_action": {
+        "default_icon": "static/icons/icon64.png",
+        "default_title": "WatchRPC",
+        "default_popup": "static/popup/index.html"
     },
-    {
-      "matches": ["*://www.youtube.com/*"],
-      "run_at":"document_end",
-      "js": ["dist/inject/WatchRPC_full_Youtube.js"]
-    }
-  ]
+    "permissions": [
+        "tabs",
+        "scripting",
+        "webRequest",
+        "http://localhost/*"
+    ],
+    "web_accessible_resources": [
+        "dist/content-scripts/inject/WatchRPC_AppleMusic_Window.js"
+    ],
+    "content_scripts": [
+        {
+            "matches": [
+                "*://music.youtube.com/*",
+                "*://open.spotify.com/*",
+                "*://music.apple.com/*",
+                "*://www.youtube.com/*"
+            ],
+            "run_at": "document_end",
+            "js": [
+                "dist/content-scripts/CommonUtils.js"
+            ]
+        },
+        {
+            "matches": [
+                "*://music.youtube.com/*"
+            ],
+            "run_at": "document_end",
+            "js": [
+                "dist/content-scripts/WatchRPC_YTMusic.js"
+            ]
+        },
+        {
+            "matches": [
+                "*://open.spotify.com/*"
+            ],
+            "run_at": "document_end",
+            "js": [
+                "dist/content-scripts/WatchRPC_spotify.js"
+            ]
+        },
+        {
+            "matches": [
+                "*://music.apple.com/*"
+            ],
+            "run_at": "document_end",
+            "js": [
+                "dist/content-scripts/WatchRPC_AppleMusic.js"
+            ]
+        },
+        {
+            "matches": [
+                "*://www.youtube.com/*"
+            ],
+            "run_at": "document_end",
+            "js": [
+                "dist/content-scripts/WatchRPC_full_Youtube.js"
+            ]
+        }
+    ]
 }
-
-
-
-
-
