--- a/Browser/tsconfig.json
+++ b/Browser/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "None",
     "noImplicitAny": false,
     "outDir": "dist",
     "baseUrl": ".",
@@ -8,7 +8,7 @@
     "allowJs": true,
     "lib": ["ESNext","DOM"],
     "skipLibCheck": true,
-    "diagnostics": true
+    "diagnostics": true,
   },
 }
 
