--- a/Desktop/package.json
+++ b/Desktop/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "discord-rpc": "^4.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
